[package]
name = "keystore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "subkey"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
futures = "0.3.9"
hex = "0.4.2"
thiserror = "1.0.30"
rpassword = "7.0.0"
tiny-bip39 = "0.8.2"
serde = "1.0.136"
serde_json = "1.0.74"
tokio = { version = "1.15", features = ["signal", "rt-multi-thread"] }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40"}
sp-core = { default-features = false , git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40"}
sc-service = { default-features = false, git = "https://github.com/paritytech/substrate.git",branch = "polkadot-v0.9.40"}
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40"}
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }